// License header (if applicable)
// File overview
// Syntax
// Package
// Imports (sorted)
// File options
// Everything else

syntax = "proto3";

package chat;

option go_package = "./chat";

service ChatService {
  rpc LogIn(LoginReq) returns (LoginResp);

  rpc LogOut(Empty) returns (Empty);

  rpc Chat(stream Message) returns (stream Message);
}

message Empty {}

message LoginReq { string username = 1; }

message LoginResp { string token = 2; }

// 定义消息内容
message Message {
  string text = 1;
  int64 timestamp = 2;
}
